--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <h2 class="visually-hidden">Our preference</h2>
           <ul class="preference list">
             <li class="pref-content">
+              <div class="pref-rectangle">
+                <svg class="pref-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="name-group">Strategy</h3>
               <p class="pref-text">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="pref-content">
+              <div class="pref-rectangle">
+                <svg class="pref-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="name-group">Punctuality</h3>
               <p class="pref-text">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="pref-content">
+              <div class="pref-rectangle">
+                <svg class="pref-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="name-group">Diligence</h3>
               <p class="pref-text">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="pref-content">
+              <div class="pref-rectangle">
+                <svg class="pref-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="name-group">Technologies</h3>
               <p class="pref-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -146,6 +166,7 @@
                 <h3 class="team-name-group">Mark Guerrero</h3>
                 <p class="pref-text">Product Designer</p>
               </div>
+              <div class="social-btn"></div>
             </li>
             <li class="team-item">
               <img src="./images/Tom-Ford.jpg" width="264" alt="Tom Ford" />
@@ -174,6 +195,59 @@
               <div class="card-content">
                 <h3 class="team-name-group">Daniel Wilson</h3>
                 <p class="pref-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- SECTION 5-->
+      <section class="section customers">
+        <div class="container">
+          <h2 class="name-sect">Customers</h2>
+          <ul class="customers list">
+            <li class="customers-item">
+              <div class="customers-content">
+                <svg class="icon-customers" height="56" width="104">
+                  <use href="./images/icons.svg#icon-logo-company"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-item">
+              <div class="customers-content">
+                <svg class="icon-customers" height="56" width="104">
+                  <use href="./images/icons.svg#icon-logo-foster-peters"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-item">
+              <div class="customers-content">
+                <svg class="icon-customers" height="56" width="104">
+                  <use href="./images/icons.svg#icon-logo-tagline"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-item">
+              <div class="customers-content">
+                <svg class="icon-customers" height="56" width="104">
+                  <use
+                    href="./images/icons.svg#icon-logo-tagline-company"
+                  ></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-item">
+              <div class="customers-content">
+                <svg class="icon-customers" height="56" width="104">
+                  <use href="./images/icons.svg#icon-logo-ya-co"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-item">
+              <div class="customers-content">
+                <svg class="icon-customers" height="56" width="104">
+                  <use href="./images/icons.svg#icon-logo-brand"></use>
+                </svg>
               </div>
             </li>
           </ul>
