--- a/portfolio.html
+++ b/portfolio.html
@@ -185,14 +185,57 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-content">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-footer-text">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container">
+        <div class="footer-content">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-footer-text">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <p class="footer-social-text">Social media</p>
+          <ul class="social list">
+            <li>
+              <a href=""
+                ><div class="social-link">
+                  <div></div>
+                  <svg class="icon-social" height="16" width="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a href=""
+                ><div class="social-link">
+                  <div></div>
+                  <svg class="icon-social" height="16" width="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a href=""
+                ><div class="social-link">
+                  <div></div>
+                  <svg class="icon-social" height="16" width="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></div
+              ></a>
+            </li>
+            <li>
+              <a href=""
+                ><div class="social-link">
+                  <div></div>
+                  <svg class="icon-social" height="16" width="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg></div
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
