--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,9 @@
           <ul class="menu-nav list">
             <li><a class="menu-nav link" href="./index.html">Studio</a></li>
             <li>
-              <a class="menu-nav link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-nav link active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li><a class="menu-nav link" href="">Contacts</a></li>
           </ul>
@@ -65,11 +67,20 @@
           <ul class="work list">
             <li class="work-items">
               <a class="project link" href="./images/banking-app.jpg">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="Photo Banking App"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="Photo Banking App"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Banking App Interface Concept</h2>
                   <p class="type-project">App</p>
@@ -78,11 +89,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/cashless.jpg">
-                <img
-                  src="./images/cashless.jpg"
-                  alt="Photo Cashless"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/cashless.jpg"
+                    alt="Photo Cashless"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Cashless Payment</h2>
                   <p class="type-project">Marketing</p>
@@ -91,11 +111,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/meditation.jpg">
-                <img
-                  src="./images/meditation.jpg"
-                  alt="Photo Meditation"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/meditation.jpg"
+                    alt="Photo Meditation"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Meditation App</h2>
                   <p class="type-project">App</p>
@@ -104,11 +133,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/taxi-srv.jpg">
-                <img
-                  src="./images/taxi-srv.jpg"
-                  alt="Pictures Taxi Service"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/taxi-srv.jpg"
+                    alt="Pictures Taxi Service"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Taxi Service</h2>
                   <p class="type-project">Marketing</p>
@@ -117,11 +155,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/scr-illustr.jpg">
-                <img
-                  src="./images/scr-illustr.jpg"
-                  alt="Pictures Screen Illustrations"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/scr-illustr.jpg"
+                    alt="Pictures Screen Illustrations"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Screen Illustrations</h2>
                   <p class="type-project">Design</p>
@@ -130,11 +177,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/online-course.jpg">
-                <img
-                  src="./images/online-course.jpg"
-                  alt="Pictures Online Courses"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/online-course.jpg"
+                    alt="Pictures Online Courses"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Online Courses</h2>
                   <p class="type-project">Marketing</p>
@@ -143,11 +199,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/inst-story.jpg">
-                <img
-                  src="./images/inst-story.jpg"
-                  alt="Photo Instagram Stories"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/inst-story.jpg"
+                    alt="Photo Instagram Stories"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Instagram Stories Concept</h2>
                   <p class="type-project">Design</p>
@@ -156,11 +221,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/food.jpg">
-                <img
-                  src="./images/food.jpg"
-                  alt="Photo Organic Food"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/food.jpg"
+                    alt="Photo Organic Food"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Organic Food</h2>
                   <p class="type-project">Web Site</p>
@@ -169,11 +243,20 @@
             </li>
             <li class="work-items">
               <a class="project link" href="./images/coffee.jpg">
-                <img
-                  src="./images/coffee.jpg"
-                  alt="Photo Fresh Coffee"
-                  width="360"
-                />
+                <div class="work-img-overflow">
+                  <img
+                    src="./images/coffee.jpg"
+                    alt="Photo Fresh Coffee"
+                    width="360"
+                  />
+                  <div class="work-cover-block">
+                    <p class="work-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Fresh Coffee</h2>
                   <p class="type-project">Web Site</p>
