--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             >Web<span class="logo-text">Studio</span>
           </a>
           <ul class="menu-nav list">
-            <li><a class="menu-nav link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="menu-nav link active" href="./index.html">Studio</a>
+            </li>
             <li>
               <a class="menu-nav link" href="./portfolio.html">Portfolio</a>
             </li>
@@ -55,7 +57,7 @@
       <section class="section hero">
         <div class="container hero-container">
           <h1 class="hero-text">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button">
+          <button type="button" class="hero-button" data-modal-open>
             <span class="hero-btn-txt">Order Service</span>
           </button>
         </div>
@@ -459,16 +461,11 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop" data-modal>
-  <div class="modal">
-    <p>
-      dvsfdsxvccbfghfhgfc
-    </p>
-    <button data-modal-close>Close</button>
-
-  </div>
-
-</div>
-    <script src="./js/modal.js"></script> -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-btn" data-modal-close>X</button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
