--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <h3 class="team-name-group">Mark Guerrero</h3>
                 <p class="pref-text">Product Designer</p>
                 <ul class="social list">
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -177,7 +177,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -186,7 +186,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -195,7 +195,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -213,7 +213,7 @@
                 <h3 class="team-name-group">Tom Ford</h3>
                 <p class="pref-text">Frontend Developer</p>
                 <ul class="social list">
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -222,7 +222,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -231,7 +231,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -240,7 +240,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -262,7 +262,7 @@
                 <h3 class="team-name-group">Camila Garcia</h3>
                 <p class="pref-text">Marketing</p>
                 <ul class="social list">
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -271,7 +271,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -280,7 +280,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -289,7 +289,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -311,7 +311,7 @@
                 <h3 class="team-name-group">Daniel Wilson</h3>
                 <p class="pref-text">UI Designer</p>
                 <ul class="social list">
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -320,7 +320,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -329,7 +329,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -338,7 +338,7 @@
                         </svg></div
                     ></a>
                   </li>
-                  <li>
+                  <li class="social-items">
                     <a href=""
                       ><div class="social-link">
                         <div></div>
@@ -360,11 +360,11 @@
           <h2 class="name-sect">Customers</h2>
           <ul class="customers list">
             <li class="customers-item">
-              <div class="customers link">
+              <a href="" class="customers link">
                 <svg class="icon-customers" height="56" width="104">
                   <use href="./images/icons.svg#icon-logo-company"></use>
                 </svg>
-              </div>
+              </a>
             </li>
             <li class="customers-item">
               <a class="customers link" href="">
@@ -463,7 +463,12 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-btn" data-modal-close>X</button>
+        <button type="button" class="modal-btn" data-modal-close>
+          <svg class="icon-modal-btn" width="8" height="8">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
