--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         </div>
         <div class="footer-social">
           <p class="footer-social-text">Social media</p>
-          <ul class="social list">
+          <ul class="social-footer list">
             <li>
               <a href=""
                 ><div class="social-link">
@@ -466,7 +466,6 @@
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="icon-modal-btn" width="8" height="8">
             <use href="./images/icons.svg#icon-linkedin"></use>
-
           </svg>
         </button>
       </div>
