--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer">
         <div class="footer-content">
           <a class="logo-footer" href="./index.html"
             >Web<span class="logo-footer-text">Studio</span></a
@@ -421,38 +421,36 @@
         <div class="footer-social">
           <p class="footer-social-text">Social media</p>
           <ul class="social-footer list">
-            <li>
-              <a href=""
+            <li class="social-footer-items">
+              <a class="social-footer-link" href=""
                 ><div class="social-link">
-                  <div></div>
-                  <svg class="icon-social" height="16" width="16">
+                  <svg class="footer-icon-social" height="24" width="24">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg></div
               ></a>
             </li>
-            <li>
-              <a href=""
+            <li class="social-footer-items">
+              <a class="social-footer-link" href=""
                 ><div class="social-link">
-                  <div></div>
-                  <svg class="icon-social" height="16" width="16">
+                  <svg class="footer-icon-social" height="24" width="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></div
               ></a>
             </li>
-            <li>
-              <a href=""
+            <li class="social-footer-items">
+              <a class="social-footer-link" href=""
                 ><div class="social-link">
                   <div></div>
-                  <svg class="icon-social" height="16" width="16">
+                  <svg class="footer-icon-social" height="24" width="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></div
               ></a>
             </li>
-            <li>
-              <a href=""
+            <li class="social-footer-items">
+              <a class="social-footer-link" href=""
                 ><div class="social-link">
                   <div></div>
-                  <svg class="icon-social" height="16" width="16">
+                  <svg class="footer-icon-social" height="24" width="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg></div
               ></a>
