--- a/portfolio.html
+++ b/portfolio.html
@@ -60,11 +60,21 @@
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="filter list">
-            <li><button class="filt-btn" type="button">All</button></li>
-            <li><button class="filt-btn" type="button">Web Site</button></li>
-            <li><button class="filt-btn" type="button">App</button></li>
-            <li><button class="filt-btn" type="button">Design</button></li>
-            <li><button class="filt-btn" type="button">Marketing</button></li>
+            <li class="filter-items">
+              <button class="filt-btn" type="button">All</button>
+            </li>
+            <li class="filter-items">
+              <button class="filt-btn" type="button">Web Site</button>
+            </li>
+            <li class="filter-items">
+              <button class="filt-btn" type="button">App</button>
+            </li>
+            <li class="filter-items">
+              <button class="filt-btn" type="button">Design</button>
+            </li>
+            <li class="filter-items">
+              <button class="filt-btn" type="button">Marketing</button>
+            </li>
           </ul>
           <ul class="work list">
             <li class="work-items">
@@ -75,13 +85,11 @@
                     alt="Photo Banking App"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Banking App Interface Concept</h2>
@@ -97,13 +105,12 @@
                     alt="Photo Cashless"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Cashless Payment</h2>
@@ -119,13 +126,12 @@
                     alt="Photo Meditation"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Meditation App</h2>
@@ -141,13 +147,12 @@
                     alt="Pictures Taxi Service"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Taxi Service</h2>
@@ -163,13 +168,12 @@
                     alt="Pictures Screen Illustrations"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Screen Illustrations</h2>
@@ -185,13 +189,12 @@
                     alt="Pictures Online Courses"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Online Courses</h2>
@@ -207,13 +210,12 @@
                     alt="Photo Instagram Stories"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Instagram Stories Concept</h2>
@@ -229,13 +231,12 @@
                     alt="Photo Organic Food"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Organic Food</h2>
@@ -251,13 +252,12 @@
                     alt="Photo Fresh Coffee"
                     width="360"
                   />
-                  <div class="work-cover-block">
-                    <p class="work-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+
+                  <p class="work-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="work-items-conteiner">
                   <h2 class="project-text">Fresh Coffee</h2>
@@ -284,38 +284,32 @@
           <p class="footer-social-text">Social media</p>
           <ul class="social-footer list">
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <div></div>
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <div></div>
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
