--- a/index.html
+++ b/index.html
@@ -422,38 +422,32 @@
           <p class="footer-social-text">Social media</p>
           <ul class="social-footer list">
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <div></div>
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-footer-items">
-              <a class="social-footer-link" href=""
-                ><div class="social-link">
-                  <div></div>
-                  <svg class="footer-icon-social" height="24" width="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg></div
-              ></a>
+              <a class="social-footer-link" href="">
+                <svg class="footer-icon-social" height="24" width="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
